--- a/src/App.css
+++ b/src/App.css
@@ -61,36 +61,9 @@ body{
   border-radius: 5px 5px 0 0;
 }
 
-.search-input .autocom-box{
-  padding: 0;
-  opacity: 0;
-  pointer-events: none;
-  max-height: 280px;
-  overflow-y: auto;
-}
-datalist{
- 
-  
-}
-.search-input.active .autocom-box{
-  padding: 10px 8px;
-  opacity: 1;
-  pointer-events: auto;
-}
-.autocom-box li{
-  list-style: none;
-  padding: 8px 12px;
-  display: none;
-  width: 100%;
-  cursor: default;
-  border-radius: 3px;
-}
 
-.search-input.active .autocom-box li{
-  display: block;
-}
-.autocom-box li:hover{
-  background: #efefef;
+input::-webkit-calendar-picker-indicator {
+	display: none;
 }
 
 .search-input .icon{
@@ -122,6 +95,52 @@ div.gallery {
 div.gallery img {
   width: 100%;
   height: 100%;
+}
+
+@media screen  and (max-width: 600px) {
+  div.gallery {
+    grid-template-columns: auto;
+
+
+  }
+  .search-input .icon{
+    
+    height: 35px;
+    width: 40px;
+    text-align: center;
+    line-height: 35px;
+    font-size: 20px;
+    
+  }
+  
+
+  
+}
+@media screen  and (max-width: 800px){
+  div.gallery {
+    grid-template-columns: auto auto;
+
+
+  }
+
+}
+@media screen  and (max-width: 583px){
+  .wrapper .search-input{
+   
+    width: 120%;
+    margin-left: -10%;
+   
+  }
+
+}
+@media screen  and (max-width: 470px){
+  .wrapper .search-input{
+   
+    width: 150%;
+    margin-left: -25%;
+   
+  }
+
 }
 
 
